# point_of_sale

./: .gitignore  CMakeLists.txt  README.md
python/: scanner.py
python_scripts/: barcode_scanner.py
src/Application/: BillingForm.cpp  BillingForm.h  BillingForm.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProductAddDialog.cpp  ProductAddDialog.h  ProductAddDialog.ui  ProductManagementForm.cpp  ProductManagementForm.h  ProductManagementForm.ui  main.cpp
src/Application/Scanner/: DummyScanner.cpp  DummyScanner.h  DummyScanner.ui
src/Application/ScannerDialog/: scandialog.cpp  scandialog.h  scandialog.ui
src/Application/addItems/: additem.cpp  additem.h  additem.ui
src/Application/billDialog/: billdialog.cpp  billdialog.h  billdialog.ui
src/Core/: CMakeLists.txt
src/Core/Bill/: Bill.cpp  Bill.h
src/Core/Database/: Product.h  ProductDatabase.cpp  ProductDatabase.h
src/Core/Models/: BillModel.cpp  BillModel.h  BillTableModel.cpp  BillTableModel.h  ProductsTableModel.cpp  ProductsTableModel.h
src/Core/Scanner/: CameraScanner.cpp  CameraScanner.h  Scanner.h
